--- a/build.gradle
+++ b/build.gradle
@@ -7,23 +7,59 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+
 	}
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
-version = '0.0.1-SNAPSHOT'
+
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
 	mavenCentral()
 }
 
+jar {
+	baseName = 'aprilskin_api'
+	version = '00.00.60'
+}
+
+bootRepackage {
+	mainClass = 'com.named.sports.SportsApiApp'
+	executable = true
+}
 
 dependencies {
+	compile("org.springframework.boot:spring-boot-starter-web")
+	compile("org.springframework.boot:spring-boot-starter-actuator")
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile("org.springframework.boot:spring-boot-starter-cache")
+
+
+	compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '1.3.0.RELEASE'
+	compile group: 'org.springframework', name: 'springloaded', version: '1.2.7.RELEASE'
+	compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.5.0'
+	compile group: 'javax.cache', name: 'cache-api', version: '1.0.0'
+	compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.8.5'
+
+	compileOnly("org.projectlombok:lombok:1.16.14")
+
+	compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '4.8'
+
+
+	testCompile("org.springframework.boot:spring-boot-starter-test")
+	testCompile("com.h2database:h2")
+	testCompile('com.jayway.jsonpath:json-path')
+
+	compile 'org.apache.commons:commons-lang3:3.1'
+	compile 'org.apache.httpcomponents:httpcore:4.4.1'
+	compile 'org.apache.httpcomponents:httpclient:4.4.1'
+	compile 'org.apache.httpcomponents:httpmime:4.5'
+
 }
