--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -8,9 +8,9 @@ spring:
     password: password
   jpa:
     database: mysql
-    generate-ddl: false
+    generate-ddl: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     show-sql: true
 
 
