--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,11 @@ repositories {
 
 jar {
 	baseName = 'aprilskin_api'
-	version = '00.00.60'
+	version = '00.00.1'
 }
 
 bootRepackage {
-	mainClass = 'com.named.sports.SportsApiApp'
+	mainClass = 'com.aprilskin.AprilSpringbootApplication'
 	executable = true
 }
 
