--- a/build.gradle
+++ b/build.gradle
@@ -38,13 +38,11 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-actuator")
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	runtime('mysql:mysql-connector-java')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile('org.springframework.boot:spring-boot-starter-test')
 	compile("org.springframework.boot:spring-boot-starter-cache")
 
 	// https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
 	compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.1.0'
-
-
 
 	compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '1.3.0.RELEASE'
 	compile group: 'org.springframework', name: 'springloaded', version: '1.2.7.RELEASE'
