--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,7 +10,7 @@ spring:
     database: mysql
     generate-ddl: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     show-sql: true
 
 
