--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -13,4 +13,15 @@ spring:
       ddl-auto: none
     show-sql: true
 
+---
 
+spring:
+  profiles: prd
+logging :
+  file : logs/prd_app.log
+  pattern:
+    file :  "%d %-5level [%thread] %logger{0} : %msg%n"
+  level:
+    org.springframework.web: WARN
+    guru.springframework.controllers: WARN
+    org.hibernate : WARN
