src/main/resources  application-prd 시간표시 설정

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -20,7 +20,7 @@ spring:
 logging :
   file : logs/local_app.log
   pattern:
-    file :  "%msg%n"
+    file :  "%d{yyyy-MM-dd HH:mm:ss}%msg%n"
   level:
     org.springframework.web: INFO
     guru.springframework.controllers: INFO
