--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -19,7 +19,7 @@ spring:
 logging :
   file : logs/prd_app.log
   pattern:
-    file :  "%msg%n"
+    file :  "%d{yyyy-MM-dd HH:mm:ss}%msg%n"
   level:
     org.springframework.web: INFO
     april_spring_boot.springframework.controllers: INFO
