--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -3,7 +3,7 @@ spring:
     banner-mode: "off"
   datasource:
     driverClassName: org.mariadb.jdbc.Driver
-    url: "jdbc:mariadb://localhost:3306/aprilskindb"
+    url: "jdbc:mysql://localhost:3306/aprilskindb"
     username: root
     password: password
   jpa:
