--- a/build.gradle
+++ b/build.gradle
@@ -63,5 +63,7 @@ dependencies {
 	compile 'org.apache.httpcomponents:httpcore:4.4.1'
 	compile 'org.apache.httpcomponents:httpclient:4.4.1'
 	compile 'org.apache.httpcomponents:httpmime:4.5'
+	compile 'org.springframework.boot:spring-boot-starter-security'
+	compile 'org.springframework.boot:spring-boot-starter-data-rest'
 
 }
